--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.home {
   text-align: center;
   width: 100%;
   height: 100vh;
@@ -21,6 +21,7 @@
   width: 30vw;
   /* font-weight: bold; */
   margin: auto;
+  text-align: center;
 }
 
 
@@ -69,6 +70,7 @@
   background-color: rgb(0, 0, 0);
   margin-top: 50vh;
   position: absolute;
+  /* border: 2px solid red; */
 }
 
 .featuredText {
@@ -79,6 +81,7 @@
   /* font-weight: bold; */
   color: white;
   margin-top: 40vh;
+  /* border: 2px solid red; */
 }
 
 .featuredTextDescription {
@@ -87,21 +90,51 @@
   width: 30vw;
   color: white;
   margin-top: 60vh;
+  /* border: 2px solid red; */
+}
+
+.featured-link {
+  text-decoration: none; /* Removes underline */
+  color: inherit; /* Inherits text color from parent */
 }
 
 
+/* menu */
 
-/* side menu */
+.menuIconContainer {
+  position: absolute;
+  margin-left: 1.7vw;
+  margin-top: 1.2%;
+  width: 40px; /* Adjust as needed */
+  height: 40px;
+  /* border: 2px solid red; */
+  z-index: 998;
+}
+
+.menuIcon {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+}
+
+.menuCheckBox input:checked ~ .menuIconContainer{
+  position: fixed;
+}
 
 .menuCheckBox input {
   position: absolute;
   margin-left: 2.5vw;
   margin-top: 2%;
-  transform: scale(2.5);
+  transform: scale(2.8);
   z-index: 999;
   cursor: pointer;
+  opacity: 0;
 }
 .menuCheckBox input:checked {
+  position: fixed;
+}
+
+.menuCheckBox input:checked ~ .menuIconContainer{
   position: fixed;
 }
 
@@ -119,7 +152,7 @@
   position: fixed;
   top: 0;
   left: -250px;
-  background-color: #b6b6b6;
+  background-color: #e0e0e0;
   overflow-x: hidden;
   transition: 0.3s;
   padding-top: 60px;
@@ -175,9 +208,10 @@
   /* border: 2px solid red; */
   font-family: 'Courier New', Courier, monospace;
   font-size: 40px;
-  width: 40vw;
+  width: 50vw;
   /* font-weight: bold; */
   margin: auto;
+  text-align: center;
 }
 
 /* options */
@@ -191,24 +225,44 @@
 
 .savoury {
   height: 60vh;
-  width: 25%;
+  width: 100%;
   background-color: blue;
-  margin-left: 10.5%;
   background-image: url(savouryTest.jpg);
   display: flex;
   background-size: cover; /* Ensures the image covers the entire element */
   background-position: center; /* Centers the image */
   background-repeat: no-repeat; /* Prevents repeating */
   align-items: center;
-  display: flex;
   cursor: pointer;
+  z-index: 1;
+  /* border: 2px solid red; */
+  position: relative;
+}
+
+.savouryParent {
+  height: 60vh;
+  width: 25%;
+  background-color: blue;
+  margin-left: 10%;
+}
+
+.savoury:hover {
+  filter: brightness(110%); 
+}
+
+.sweet:hover {
+  filter: brightness(110%); 
+}
+
+.travel:hover {
+  filter: brightness(110%); 
 }
 
 
 .sweet {
   height: 60vh;
-  width: 25%;
-  margin-left: 2.5%;
+  width: 100%;
+  /* margin-left: 2.5%; */
   background-color: blue;
   background-image: url(sweetTest.jpg);
   display: flex;
@@ -218,11 +272,21 @@
   align-items: center;
   display: flex;
   cursor: pointer;
+  /* border: 2px solid red; */
+  position: relative;
 }
-.travel {
+
+.sweetParent {
   height: 60vh;
   width: 25%;
+  background-color: blue;
   margin-left: 2.5%;
+}
+
+.travel {
+  height: 60vh;
+  width: 100%;
+  /* margin-left: 2.5%; */
   background-color: blue;
   background-image: url(travelTest.jpg);
   display: flex;
@@ -232,24 +296,91 @@
   align-items: center;
   display: flex;
   cursor: pointer;
+  /* border: 2px solid red; */
+  position: relative;
+}
+
+.travelParent {
+  height: 60vh;
+  width: 25%;
+  background-color: blue;
+  margin-left: 2.5%;
 }
 
 .whiteTextBox {
-  width: 90%;
-  height: 12vh;
+  width: 100%;
+  height: 11vh;
   opacity: 0.6;
   margin: auto;
   background-color: white;
   margin-top: 40vh;
   position: absolute;
+  z-index: 2;
+  display: flex;
+  flex-direction: column; /* Stack elements vertically */
+  align-items: center; /* Center horizontally */
+  justify-content: space-between; /* Push elements to top and bottom */
+  padding: 1vh 0; /* Add some padding for spacing */
+  /* border: 2px solid red; */
+}
+
+.optionsTitles {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 40px;
+  width: 30vw;
+  text-align: center; /* Ensure text is centered */
+  color: black;
+  width: auto;
+  /* border: 2px solid red; */
+}
+
+.optionsDescription {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 15px;
+  width: 30vw;
+  text-align: center; /* Ensure text is centered */
+  color: black;
+  z-index: 5;
+  width: auto;
+  /* border: 2px solid red; */
 }
 
 
 
 
-/* white space */
-.aboutMe {
+/* about me*/
+.aboutMeContainer {
   background-color: rgb(255, 255, 255);
   width: 100%;
   height: 60vh;
+  display: flex;
+  justify-content: space-between; /* Ensures elements are placed at opposite ends */
+  align-items: center; /* Centers them vertically */
+  padding: 0 5%; /* Optional: Adds padding for better spacing */
+}
+
+.aboutMePic {
+  background-color: blue;
+  width: 35%;
+  height: 55vh;
+  background-image: url(aboutMeTest.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.aboutMeTextBox {
+  width: 40%;
+  height: 40%;
+  background-color: blue;
+}
+
+
+/* socials */
+
+.socialsBg {
+  background-color: rgb(226, 224, 224);
+  width: 100%;
+  height: 10vh;
+  display: flex;
 }
